--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "カレンダーアプリ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "backend": "nodemon ./backend/bin/www",
+    "frontend": "PORT=3002 npm start --prefix frontend",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\" "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^8.2.1",
-    "express-generator": "^4.16.1"
+    "create-react-app": "^5.0.1",
+    "express-generator": "^4.16.1",
+    "nodemon": "^3.0.1"
   }
 }
